syntax = "proto3";

option go_package = "github.com/devnev/proto-releases/examples/releases/alpha";

message Example {
  // Not annotated means this is not include in any numbered release.
  //
  // Intended for internal or alpha-only fields.
  int32 not_annotated = 1;

  // With a designated starting release, this field will be included in any
  // release from this number onwards.
  //
  // Intended for stabilising fields to be included in general availability
  // releases.
  int32 released = 2;

  // With a designated preview release, this field will be included in any
  // preview releases from this number onwards.
  //
  // Intended to allow fields under development to be included in beta
  // releases.
  int32 previewed = 3;

  int32 previewed_released_removed = 4;
}

service ExampleService {
  rpc ExampleUnreleaseMethod ( Example ) returns ( Example );

  rpc ExampleReleasedMethod ( Example ) returns ( Example );
}
